--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ cmd/jujud/jujud
 cmd/builddb/builddb
 cmd/charmd/charmd
 cmd/charmload/charmload
-./tags
-./TAGS
+tags
+TAGS
 .emacs.desktop
 .emacs.desktop.lock
 *.test
