Update reviewboard file

--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -1,3 +1,4 @@
 REVIEWBOARD_URL = "https://reviews.vapour.ws/"
 REPOSITORY = "juju (core)"
 BRANCH = "replicaset-ipv6-fix"
+TRACKING_BRANCH = "upstream/master
