--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -1,4 +1,4 @@
 REVIEWBOARD_URL = "https://reviews.vapour.ws/"
 REPOSITORY = "juju (core)"
 BRANCH = "replicaset-ipv6-fix"
-TRACKING_BRANCH = "upstream/master
+TRACKING_BRANCH = "upstream/master"
