--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-azure==0.8.0
-# coverage==3.7.1
+azure==2.0.0rc3
 pywinrm==0.0.3
 pexpect>=2.4
-# pyyaml==3.11
-# mock==1.3.0
-# launchpadlib==1.10.3
-# boto==2.20.1
-# python-jenkins==0.2.1
-# requests==2.8.1
-# python-novaclient==2.17.0
