--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: juju
-version: 2.0-beta17
+version: 2.0-beta18
 summary: juju client
 description: Through the use of charms, juju provides you with shareable, re-usable, and repeatable expressions of devops best practices.
 confinement: devmode
@@ -15,9 +15,10 @@ parts:
     go-importpath: github.com/juju/juju
     source: https://github.com/juju/juju.git
     source-type: git
-    source-tag: juju-2.0-beta17
+    #If you want to grab a specific revision tag, include it here
+    #source-tag: juju-2.0-beta18
     snap:
     - -bin/filetoconst
     - -bin/winuserdata
     #If you are releasing a build with public streams, also remove the agent
-    - -bin/jujud
+    #- -bin/jujud
