--- a/cloud/fallback-public-cloud.yaml
+++ b/cloud/fallback-public-cloud.yaml
@@ -50,7 +50,7 @@ clouds:
         endpoint: https://www.googleapis.com
   azure:
     type: azure
-    auth-types: [ userpass ]
+    auth-types: [ service-principal-secret, userpass ]
     regions:
       centralus:
         endpoint: https://management.azure.com
@@ -126,7 +126,7 @@ clouds:
         identity-endpoint: https://graph.windows.net
   azure-china:
     type: azure
-    auth-types: [ userpass ]
+    auth-types: [ service-principal-secret, userpass ]
     regions:
       chinaeast:
         endpoint: https://management.chinacloudapi.cn
