Change the actual configuration file.

--- a/perf_static/collectd.conf
+++ b/perf_static/collectd.conf
@@ -43,7 +43,6 @@ LoadPlugin users
         Plugin "cpu"
         # PluginInstance "/[0,2,4,6,8]$/"
         Type "cpu"
-        #TypeInstance "unspecified"
 
         # SetPlugin "cpu"
         # SetPluginInstance "even-%{aggregation}"
@@ -51,11 +50,11 @@ LoadPlugin users
         GroupBy "Host"
         GroupBy "TypeInstance"
 
-        CalculateNum true
+        CalculateNum false
         CalculateSum true
         CalculateAverage true
         CalculateMinimum false
-        CalculateMaximum false
+        CalculateMaximum true
         CalculateStddev false
     </Aggregation>
 </Plugin>
