--- a/charms/jenkins-juju-ci/metadata.yaml
+++ b/charms/jenkins-juju-ci/metadata.yaml
@@ -7,6 +7,7 @@ description: |
   This charm will move /var/lib/<jenkins | lxd | lxc> to a big partition
   if available. Several sets of tools are installed. Once configuration
   is complete, the jenkins-slave is ready to run Juju CI tests.
+subordinate: true
 requires:
   juju-info:
     interface: juju-info
