Fix copy and paste errors as per MP comment.

--- a/charms/simple-resource-http/metadata.yaml
+++ b/charms/simple-resource-http/metadata.yaml
@@ -11,11 +11,9 @@ categories:
 series:
   - trusty
   - precise
-  - utopic
-  - vivid
-  - wily
   - xenial
   - yakkety
+  - zesty
 resources:
   index:
     type: file
